fixes after merge